# hierarchical_molecular_tktd

./: .gitignore  README.md  pyproject.toml  requirements.txt  sim.py  test.sh
docs/: experimental_procedure.md
hierarchical_molecular_tktd/: __init__.py  data.py  mod.py  plot.py  prob.py  sim.py
scenarios/hierarchical_cext/: settings.cfg
scenarios/hierarchical_cext_nested/: settings.cfg
scenarios/hierarchical_cext_nested_sigma_hyperprior/: settings.cfg
scenarios/hierarchical_cext_nested_sigma_hyperprior_informed_reduced_dataset_rna_pulse_5/: settings.cfg
scenarios/hierarchical_cext_nested_sigma_hyperprior_informed_reduced_dataset_rna_pulse_5_substance_independent/: settings.cfg
scenarios/hierarchical_cext_nested_sigma_hyperprior_informed_rna_pulse_5/: parameters_likelihood_landscape.txt  settings.cfg
scenarios/hierarchical_cext_nested_sigma_hyperprior_informed_rna_pulse_5_substance_independent/: settings.cfg
scenarios/hierarchical_cext_nested_sigma_hyperprior_nuts/: settings.cfg
scenarios/hierarchical_cext_nested_sigma_hyperprior_per_substance/: settings.cfg
scenarios/hierarchical_cext_nested_sigma_hyperprior_reduced_dataset/: settings.cfg
scenarios/model_inspection/: settings.cfg
scripts/: likelihood_landscape.py  method_1_data_structure.ipynb  method_2_mean_variance_method.ipynb  method_3_model_inspection.ipynb  method_4_animated_simulation.ipynb  results_01_cext_deviation.py  results_01_individual_fits.py  results_02_simulation_study.ipynb  results_03_simulation_study_systematic.ipynb  results_03_simulation_study_systematic.py  run_likelihoods.sh  scenario_hierarchical_cext.ipynb  scenario_hierarchical_cext_nested.ipynb  scenario_hierarchical_cext_nested_sigma_hyperprior.ipynb  scenario_hierarchical_cext_nested_sigma_hyperprior_rna_pulse_5.ipynb
tests/: test_simulation.py
workflow/: Snakefile  config.yaml
(+103 files in other folders)
