[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hierarchical_molecular_tktd"
version = "0.1.6"
authors = [
  { name="Florian Schunck", email="fluncki@protonmail.com" },
]
description = "Molecular TKTD: Hierarchical TKTD RNA Pulse model"
readme = "README.md"
requires-python = ">=3.10"
dependencies=[
    "tktd_rna_pulse @ git+ssh://git@github.com/flo-schu/tktd_rna_pulse.git@0.2.7",
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.3", 
    "bumpver", 
    "pre-commit",
]

[project.urls]
"Homepage" = "https://github.com/flo-schu/hierarchical_molecular_tktd"
"Issue Tracker" = "https://github.com/flo-schu/hierarchical_molecular_tktd/issues"

[tool.setuptools.packages.find]
include = ["hierarchical_molecular_tktd*"]

[tool.bumpver]
current_version = "0.1.6"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"hierarchical_molecular_tktd/__init__.py" = [
    '__version__ = "{version}"'
]
"README.md" = [
    'git clone git@github.com:flo-schu/hierarchical_molecular_tktd/{version}'
]

[tool.pytest.ini_options]
markers = [
    "slow='mark test as slow.'"
]